--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "netlify-deploy": "next build && next export"
   },
   "dependencies": {
-    "next": "^9.5.4",
+    "next": "^10.0.6",
     "node-fetch": "^2.6.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-notion": "^0.9.3"
   },
   "devDependencies": {
