--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "netlify-deploy": "next build && next export"
   },
   "dependencies": {
-    "next": "^10.0.6",
+    "next": "10.0.6",
     "node-fetch": "^2.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
