--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,12 @@
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
+[[plugins]]
+package = "@types/react"
+
+[[plugins]]
+package = "@types/node"
+
 [context.production.environment]
 NEXT_SERVERLESS = "true"
 NODE_ENV = "production"
