--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "node-fetch": "^2.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-notion": "^0.9.3"
-  },
-  "devDependencies": {
+    "react-notion": "^0.9.3",
     "@types/node": "^17.0.12",
     "@types/react": "^17.0.38",
     "typescript": "^4.5.5"
+  },
+  "devDependencies": {
+  
   }
 }
