--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
     "netlify-deploy": "next build && next export"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.2.1",
+    "@types/node": "^17.0.12",
+    "@types/react": "^17.0.38",
     "next": "10.0.6",
     "node-fetch": "^2.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-notion": "^0.9.3",
-    "@types/node": "^17.0.12",
-    "@types/react": "^17.0.38",
     "typescript": "^4.5.5"
   },
-  "devDependencies": {
-  
-  }
+  "devDependencies": {}
 }
