--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
     "netlify-deploy": "next build && next export"
   },
   "dependencies": {
-    "@netlify/plugin-nextjs": "^4.2.1",
     "@types/node": "^17.0.12",
     "@types/react": "^17.0.38",
-    "next": "10.0.6",
+    "next": "^10.0.6",
     "node-fetch": "^2.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
