--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "react-notion-example",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Tobias Lins",
-  "license": "MIT",
+  "name": "notion-x-example",
+  "version": "4.14.2",
+  "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "netlify-deploy": "next build && next export"
+    "analyze": "cross-env ANALYZE=true next build",
+    "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
-    "@netlify/plugin-nextjs": "^4.2.1",
-    "@types/node": "^17.0.12",
-    "@types/react": "^17.0.38",
-    "next": "10.0.6",
-    "node-fetch": "^2.6.0",
+    "next": "^11.1.2",
+    "notion-client": "^4.14.1",
+    "notion-utils": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-notion": "^0.9.3",
-    "typescript": "^4.5.5"
+    "react-notion-x": "^4.14.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@next/bundle-analyzer": "^11.1.2",
+    "@types/node": "^16.11.2",
+    "@types/react": "^17.0.38",
+    "cross-env": "^7.0.3",
+    "typescript": "^4.4.4"
+  }
 }
