--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^16.11.2",
     "@types/react": "^17.0.38",
     "cross-env": "^7.0.3",
+    "eslint": "^8.7.0",
     "typescript": "^4.4.4"
   }
 }
